adding mypy tool, removing redundancies

--- a/llm-server/.vscode/settings.json
+++ b/llm-server/.vscode/settings.json
@@ -1,6 +1,13 @@
 {
     "[python]": {
-        "editor.defaultFormatter": "ms-python.python"
+        "editor.defaultFormatter": "ms-python.black-formatter"
     },
-    "python.formatting.provider": "none"
+    "python.formatting.provider": "none",
+    "editor.formatOnSave": true,
+    "python.pythonPath": "~/anaconda3/envs/copilot/bin",
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": true,
+    "python.linting.mypyEnabled": true,
+    "python.linting.mypyPath": "~/anaconda3/bin/mypy",
 }
