--- a/llm-server/docker-compose.yaml
+++ b/llm-server/docker-compose.yaml
@@ -1,10 +1,10 @@
-version: '3'
+version: "3"
 services:
   mongodb:
     image: mongo:latest
     container_name: mongodb
     ports:
-      - "27017:27017"
+      - 27017:27017
     volumes:
       - mongodb_data:/data/db
     environment:
@@ -25,7 +25,6 @@ services:
 volumes:
   mongodb_data:
   qdrant_storage:
-
 
 networks:
   opencopilot_network:
