--- a/llm-server/mypy.toml
+++ b/llm-server/mypy.toml
@@ -1,6 +1,4 @@
-[tool.mypy]
-strict = true
-disallow_untyped_defs=true
-
-[tool.mypy.my_module]
-disallow_untyped_defs = true
+[mypy]
+strict=true
+show_error_codes=true
+exclude = requests
