--- a/llm-server/mypy.toml
+++ b/llm-server/mypy.toml
@@ -8,7 +8,8 @@ strict = true
 module = [
     "langchain",
     "flask_pymongo",
-    "pinecone"
+    "pinecone",
+    "jsonschema"
 ]
 ignore_missing_imports = true
 disallow_untyped_defs = true
